# beside_the_point

./: CMakeLists.txt  README.md
csv/: .~lock.vals.csv#  vals (Copy).csv  vals.csv
include/: adaptive_boole_quad.h  adaptive_quad.h  evaluation.h  naive_solution.h  quad_triple.h  random_generator.h  simpson_triple.h
python/: adaptive_method.py  main.py  main2.py  main3.py  main4.py
src/: adaptive_boole.cpp  adaptive_simpson.cpp  main.cpp  monte_carlo.cpp  quad_triple.cpp  simpson_triple.cpp
